--- a/Create_protokol/app/src/main/res/layout/dialog_for_add_element.xml
+++ b/Create_protokol/app/src/main/res/layout/dialog_for_add_element.xml
@@ -27,28 +27,19 @@
 
             <AutoCompleteTextView
                 android:id="@+id/autoCompleteTextView3"
-                android:layout_width="280dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="7"
                 android:hint="Введите название" />
 
             <ImageView
                 android:id="@+id/imageView4"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:padding="5dp"
                 app:srcCompat="@mipmap/arrow" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:text="Кол-во элементов:"
-            android:textColor="@color/text"
-            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,25 +47,37 @@
             android:layout_marginBottom="15dp"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/editText3"
-                android:layout_width="200dp"
+            <Switch
+                android:id="@+id/switch8"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_weight="1"
+                android:checked="false"
+                android:text="З/НЗ"
+                android:textColor="@color/text"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:gravity = "center_vertical|right"
+                android:layout_weight="1"
+                android:text="Кол-во:"
+                android:textColor="@color/text"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/editText3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="number" />
         </LinearLayout>
-
-        <Switch
-            android:id="@+id/switch8"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:text="З/НЗ"
-            android:textColor="@color/text"
-            android:textSize="18sp" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
