--- a/Create_protokol/app/src/main/res/layout/dialog_for_section.xml
+++ b/Create_protokol/app/src/main/res/layout/dialog_for_section.xml
@@ -6,9 +6,13 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:digits="0123456789,"
         android:ems="10"
         android:gravity="center"
